# rse-api-handler

./: .env  Cargo.toml  docker-compose.yml
settings/redis/: redis.conf
src/: lib.rs  main.rs
src/application/: mod.rs  ports.rs  register_user.rs
src/domain/: user.rs
src/dto/: user.rs
src/handler/: auth.rs  global.rs  mod.rs
src/helper/: api_response.rs  mod.rs  notif.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: redis.rs
src/infrastructure/security/: bcrypt_hasher.rs  mod.rs
src/routes/: mod.rs  r_auth.rs  r_global.rs  routes.rs  server.rs
src/server/: app_state.rs  build_state.rs  mod.rs  server.rs
src/test/: mod.rs  test_hasher.rs  test_redis.rs
