[package]
name = "api-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
console = "0.16.1"
dotenv = "0.15.0"
tokio = {version = "1.48.0", features = ["full"]}
validator = {version = "0.20.0", features = ["derive"]}
